--- a/app/src/main/res/raw/motion_scene.json5
+++ b/app/src/main/res/raw/motion_scene.json5
@@ -2,18 +2,28 @@
   ConstraintSets: {
     start: {
         music_pic: {
-          width: 40,
-          height: 40,
-          start: ['parent', 'start', 8],
-          top: ['parent', 'top', 16]
+          width: 50,
+          height: 50,
+          start: ['parent', 'start'],
+          top: ['parent', 'top', 8],
         },
-      box: {
-        width: 'spread',
-        height: 'spread',
-        start: ['parent', 'start'],
-        end: ['parent', 'end'],
-        top: ['parent', 'top'],
-        bottom: ['parent', 'bottom'],
+      music_title: {
+        start: ['music_pic', 'end', 8],
+        top: ['music_pic', 'top', 8],
+      },
+      music_sub_title: {
+        start: ['music_pic', 'end', 8],
+        top: ['music_title', 'bottom']
+      },
+      music_play_btn: {
+        end: ['music_next_btn', 'start', 16],
+        top: ['music_pic', 'top'],
+        bottom: ['music_pic', 'bottom']
+      },
+      music_next_btn: {
+        end: ['parent', 'end', 8],
+        top: ['music_pic', 'top'],
+        bottom: ['music_pic', 'bottom']
       }
     },
     end: {
@@ -23,16 +33,8 @@
         start: ['parent', 'start', 8],
         end: ['parent', 'end', 8],
         top: ['parent', 'top', 48],
-      },
-      box: {
-        width: 'spread',
-        height: 'spread',
-        start: ['parent', 'start'],
-        end: ['parent', 'end'],
-        top: ['parent', 'top'],
-        bottom: ['parent', 'bottom'],
+        },
       }
-    }
   },
   Transitions: {
     default: {
